fix: Adjust broken styles for OtherOption

--- a/src/styles/components/OtherOption.scss
+++ b/src/styles/components/OtherOption.scss
@@ -10,7 +10,7 @@
   &__input {
     position: relative;
     max-width: 16.75rem;
-    margin-left: 0.5rem;
+    margin-left: 3rem;
     border: none;
     border-bottom: 1px solid $background-light;
     font-size: 0.825rem;
@@ -34,7 +34,7 @@
     transition: 0.2s ease-in-out;
     &-selected {
       right: 0;
-      left: 0.5rem;
+      left: 3rem;
       opacity: 1;
     }
     &-disabled {
